   then make the default value be null.

Task 137984 (Bug in alias delete) The problem was that notifications were 
  being sent to the alias drop-down that the item was being deleted which 
  triggered an update and new selection forcing the connect to alias window to 
  be launched.  Now, the alias drop down is disabled while the update is 
  happening and enabled immediately afterward.

Fixed bug which appeared while editing tables in PostgreSQL 8.1.  If the table 
was created without an OID column, the last column would not be editable.

Fix for issue where dates aren't correctly displayed or updated when using 
'treat date as timestamp' pref in the SQl Editor result panel.

2.5 (4/7/2007)
================

Enhancements:

- Updated Czech translation (Thanks to Jan Kostrhun)
- Updated Simplified Chinese translation (Thanks to xpdz)
- Updated French translation (Thanks to Erwan Duroselle)
- Updated Italian translation strings (Thanks to Ivo Neri)

- When the user control-clicks on an identifier in the SQL editor it takes you 
  will show that object in the object tree (Same behavior as Ctrl-b).

- Dialog prompt to save file changes on exit, now includes the filename in 
  case there are multiple open files in different sessions.  Also, the session
  alias name appears in the title, in case the editor contents aren't yet 
  associated with a file.

- SQL history window
  The contents of the SQL history combo box can now be opened in a window
  where the user can search for formerly excuted statements. The history
  is available through a button next to the SQL history combo box or through
  tools pop up (ctrl+t).

- Export: Warn the user when exporting data to CSV/Excel if there are Clob 
  placeholders (<Clob>) in the table data being exported.  Also, let the user 
  know when the export to file is complete, if no command is to be executed to 
  show the exported file.
  
- 'Delete Records' action now orders the selected tables in order to satisfy any